# secretsanta2021

./: 2021.py  2022.py  2023.py  Cargo.toml  cfg.toml
src/: lib.rs  main.rs
